Edit createProduct (upload using firebase)
