# docs/swagger.json
@@ -249,16 +249,14 @@
             "format": "int64"
           }
         ],
-        "tags": [
-          "Products"
-        ]
+        "tags": ["Products"]
       }
     },
     "/products/detail-buyer/{id}": {
       "get": {
         "summary": "Get Product by Id",
         "description": "Retrieve product By Id",
-        "operationId": "getProductById",
+        "operationId": "getProductById(detail-buyer)",
         "security": [],
         "responses": {
           "200": {
@@ -600,7 +598,7 @@
               "items": {
                 "$ref": "#/definitions/coreGetNotifications"
               }
-            } 
+            }
           },
           "401": {
             "description": "Unauthenticated."
@@ -615,9 +613,7 @@
             }
           }
         },
-        "tags": [
-          "Bids"
-        ]
+        "tags": ["Bids"]
       }
     },
     "/users/lengkapi-profil": {
@@ -761,6 +757,9 @@
       "type": "object",
       "properties": {
         "message": {
+          "type": "string"
+        },
+        "imageUrls": {
           "type": "string"
         }
       }
