# routes/products.js
@@ -6,15 +6,6 @@ const bids = require('../controllers/bids');
 const products = require('../controllers/products');
 const middlewares = require('../middlewares');
 
-const storage = multer.diskStorage({
-  destination: (req, file, cb) => {
-    cb(null, './images/products');
-  },
-  filename: (res, file, cb) => {
-    cb(null, file.fieldname + '-' + Date.now() + '-' + file.originalname);
-  },
-});
-
 const fileFilter = (req, file, cb) => {
   if (file.mimetype === 'image/jpeg' || file.mimetype === 'image/jpg' || file.mimetype === 'image/png') {
     cb(null, true);
@@ -23,17 +14,15 @@ const fileFilter = (req, file, cb) => {
   }
 };
 
-const upload = multer({ storage: storage, fileFilter: fileFilter });
-const cpUpload = upload.fields([{ name: 'filenames', maxCount: 5 }]);
+const upload = multer({ fileFilter: fileFilter });
+const cpUpload = upload.array('filenames', 5);
 
 router.get('/', function (req, res) {
   res.send('Products');
 });
 
-
 router.get('/user/:id', middlewares.authorization.authorize, products.getMyProduct);
 router.get('/user/:user/:id', middlewares.authorization.authorize, products.getMyProductbyId);
-
 router.post('/', middlewares.authorization.authorize, cpUpload, products.handleCreateProduct);
 router.get('/available', middlewares.authorization.optionalAuth, products.product.getAvailableProducts);
 router.put('/:id', middlewares.authorization.authorize, cpUpload, products.handleEditProductById);
@@ -43,7 +32,5 @@ router.get('/detail/:id', middlewares.authorization.authorize, products.product.
 router.get('/history/:id', middlewares.authorization.authorize, bids.bid.handleBidHistory);
 router.get('/my-products', middlewares.authorization.authorize, products.product.handleListMyProducts);
 router.delete('/delete-product/:id', middlewares.authorization.authorize, products.product.deleteProduct);
-
-// router.post('/', products.product.handleCreateProduct);
 
 module.exports = router;
